# voteit_org

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
voteit_org/: admin.py  apps.py  jobs.py  messages.py  models.py  rules.py
voteit_org/management/commands/: create_memberships.py  generate_org_statistics.py
voteit_org/migrations/: 0001_initial.py  0002_auto_20230530_1400.py  0003_alter_membership_membership_type.py  0004_remove_membership_canceled.py
voteit_org/rest_api/: serializers.py  views.py
voteit_org/rest_api/tests/: test_views.py
voteit_org/templates/voteit_org/: check_org_email.html
voteit_org/tests/: test_docs.py  test_jobs.py  test_messages.py
