[project]
name = "voteit_org"
version = "1.0.0"
description = "VoteIT org internal housekeeping"
authors = [
    {name = "VoteIT dev team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "voteit",
    "django"
]

[project.urls]
Homepage = "https://www.voteit.se/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voteit_org"]
exclude = ["**/tests/**"]

[tool.hatch.build.targets.sdist]
packages = ["voteit_org"]
exclude = [
  "**/tests/**"
]

[tool.ruff]
include = ["pyproject.toml", "voteit_org/**/*.py", "src/**/*.py"]
