[metadata]
name = voteit_org
version = 0.1
description = VoteIT org
long_description = file: README.md
url = https://www.voteit.se/
author = VoteIT dev team
author_email = info@voteit.se
license = GPLv3

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
install_requires =
    voteit
    django

#test_suite = ...
include_package_data = true
packages = find:


[options.extras_require]
testing =

